--- a/wwp/package.json
+++ b/wwp/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^4.6.1",
     "firebase": "^8.9.1",
     "gh-pages": "^3.2.3",
+    "jquery": "^3.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
@@ -17,7 +19,7 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "./",
+  "homepage": "https://team-triad.github.io/wwp/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
