--- a/wwp/package.json
+++ b/wwp/package.json
@@ -19,7 +19,7 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://team-triad.github.io/wwp/",
+  "homepage": "https://team-triad.github.io/ssn_wwp/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
